@@ -1,6 +1,7 @@
 Revision history for Range-SetOps
 
 {{$NEXT}}
+    - Unions updated to handle Sets of Ranges.
 
 0.0.1  2018-08-15T12:23:27+01:00
     - Initial version
